# 123456

./: .gitignore  LogAnalytics.md  README.md  ShortURLAPI.md  terraform.tfstate
.github/: buildspec.yml
.github/workflows/: cicd.yaml  newlink.yaml
getlink/: Cargo.toml
getlink/src/: main.rs
infra/: .terraform.lock.hcl  apigw.tf  bootstrap  deploy.sh  dummy.txt  dynamodb.tf  getlink.tf  lambda.tf  main.tf  newlink.tf  output.tf  s3lambda.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
log_analytics/: highest_traffic_country.sh  number_of_http_requests.sh  top_10_hosts.sh
newlink/: Cargo.toml  installation.txt
newlink/src/: main.rs
shorturl/: Cargo.toml  installation.txt
shorturl/src/: main.rs
