[package]
name = "getlink"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "0.51.0"
aws-sdk-dynamodb = "0.21.0"
aws-smithy-http = "0.51.0"
aws_lambda_events = "0.7.2"
http = "0.2.8"
lambda_http = "0.7.1"
serde = "1.0.148"
tokio = { version = "1.23.0", features = ["full"] }

[[bin]]
name = "getlink"
path = "src/main.rs"
