[package]
name = "newlink"
version = "0.1.0"
edition = "2021"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.7.1"
nanoid = "0.4.0"
serde = "1.0.148"
serde_json = "1.0.89"
tokio = "1.22.0"


[[bin]]
name = "bootstrap"
path = "src/main.rs"
