[package]
name = "newlink"
version = "0.1.0"
edition = "2021"
#autobins = false

[dependencies]
aws-config = "0.51.0"
aws-sdk-dynamodb = "0.21.0"
aws-smithy-http = "0.51.0"
envconfig = "0.10.0"
http = "0.2.8"
lambda_http = "0.7.1"
lambda_runtime = "0.7.1"
nanoid = "0.4.0"
serde = "1.0.149"
serde_derive = "1.0.149"
serde_json = "1.0.89"
tokio = { version = "1.23.0", features = ["full"] }

[[bin]]
name = "newlink"
path = "src/main.rs"
